--- a/projects/projects.json
+++ b/projects/projects.json
@@ -2,7 +2,17 @@
   {
     "name": "Kita Muslim",
     "desc": "Al-Quran Application with audio, reading and translation along with a collection of prayers and hadiths.",
-    "image": "kita-muslim",
+    "image": "kita-muslim-banner",
+    "category": "live",
+    "links": {
+      "view": "https://instagramernstack.herokuapp.com/",
+      "code": "https://github.com/jigar-sable/instagram-mern"
+    }
+  },
+  {
+    "name": "Kita Muslim",
+    "desc": "Al-Quran Application with audio, reading and translation along with a collection of prayers and hadiths.",
+    "image": "kita-muslim-banner",
     "category": "live",
     "links": {
       "view": "https://instagramernstack.herokuapp.com/",
