--- a/projects/projects.json
+++ b/projects/projects.json
@@ -3,7 +3,7 @@
     "name": "Kita Muslim",
     "desc": "Al-Quran Application with audio, reading and translation along with a collection of prayers and hadiths.",
     "image": "kita-muslim-banner",
-    "category": "live",
+    "category": "android",
     "links": {
       "view": "https://instagramernstack.herokuapp.com/",
       "code": "https://github.com/jigar-sable/instagram-mern"
@@ -13,7 +13,7 @@
     "name": "Kita Muslim",
     "desc": "Al-Quran Application with audio, reading and translation along with a collection of prayers and hadiths.",
     "image": "kita-muslim-banner",
-    "category": "live",
+    "category": "android",
     "links": {
       "view": "https://instagramernstack.herokuapp.com/",
       "code": "https://github.com/jigar-sable/instagram-mern"
